Bug 484881 - Right clicking on empty space in dolphin and scrolling creates selection box
Summary: Right clicking on empty space in dolphin and scrolling creates selection box
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 484948 487113 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-01 17:51 UTC by Antti Savolainen
Modified: 2024-05-28 18:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Savolainen 2024-04-01 17:51:24 UTC
SUMMARY
Demonstrative video: https://youtu.be/0htfS37ZHPw
If I right click on empty space in dolphin folder view and then scroll down, dolphin creates a selection box despite me not holding down any mouse buttons. This does not happen if I right click on a folder

STEPS TO REPRODUCE
1. Open a folder that has enough files to scroll
2. Right click on empty space
3. Scroll down

OBSERVED RESULT
Dolphin creates a selection box.

EXPECTED RESULT
No selection box should appear

SOFTWARE/OS VERSIONS
Linux: Arch Linux
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3
Comment 1 Bug Janitor Service 2024-04-02 04:28:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/757
Comment 2 Amol Godbole 2024-04-05 02:27:46 UTC
*** Bug 484948 has been marked as a duplicate of this bug. ***
Comment 3 Felix Ernst 2024-04-05 13:59:24 UTC
Git commit 24268a4df5d4fe0a856d17ca878d793527a1188e by Felix Ernst, on behalf of Amol Godbole.
Committed on 05/04/2024 at 13:47.
Pushed by felixernst into branch 'master'.

KItemListController: don't create rubber band for a right click in an empty region

Rubber band was being incorrectly created for a right click in an empty region.
Handle this case in KItemListController::onPress().

M  +5    -0    src/kitemviews/kitemlistcontroller.cpp

https://invent.kde.org/system/dolphin/-/commit/24268a4df5d4fe0a856d17ca878d793527a1188e
Comment 4 Amol Godbole 2024-05-28 18:14:38 UTC
*** Bug 487113 has been marked as a duplicate of this bug. ***