KItemListController: don't create rubber band for a right click in an empty region

Rubber band was being incorrectly created for a right click in an empty region.
Handle this case in KItemListController::onPress().

BUG: 484881